css/styles.css
/* ... */
@media only screen and (min-width: 1157.98px) {
  .hero-header {
    max-width: 1440px;
  }
}

.hero-header-container {
    margin: 0 auto;
    padding-top: 72px;
    padding-bottom: 72px;
}
@media only screen and (min-width: 767.98px) {
    .hero-header-container {
        padding-top: 112px;
        padding-bottom: 112px;
    }
  }
@media only screen and (min-width: 1157.98px) {
    .hero-header-container {
        padding-top: 188px;
        padding-bottom: 188px;
    }
}

.hero-title {
    font-size: 36px;
    line-height: 1.11;
    margin: 0 auto;
    max-width: 216px;
    margin-bottom: 72px;
}
@media only screen and (min-width: 320px) {
    .hero-title {
        font-size: 56px;
        line-height: 1.07;
        max-width: 496px;
        margin-bottom: 36px;
    }
}
@media only screen and (min-width: 767.98px) {
  .hero-title {
    margin-bottom: 48px;
  }
}

.hero-button {
    display: block;
    margin: 0 auto;
    cursor: pointer;
    background-color: #4D5AE5;
    color: #FFFFFF;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
    padding: 16px 32px;
    border-radius: 4px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);

    transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
}
.hero-button:hover {
    background-color: #404BBF;
}
/* #endregion Hero Header Section */

/* #region Features Section*/

.features-container {
    display: flex;
    flex-direction: column;
}
.features-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 72px;
}
@media only screen and (min-width: 767.98px) {
  .features-list {
    align-items: baseline;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap: 72px;
  }
}
@media only screen and (min-width: 1158px) {
  .features-list {
    gap: 24px;
  }
}
.features-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 288px;
    gap: 8px;
}
@media only screen and (min-width: 768px) {
  .features-item{
    max-width: 356px;
    width: calc((100% - 24px) / 2);
    gap: 8px;
  }
}
@media only screen and (min-width: 1158px) {
    .features-item {
        width: calc((100% - 72px) / 4);
    }
}
.feature-img {
    display: none;
}
@media only screen and (min-width: 1158px) {
  .feature-img {
        width: 100%;
        height: 112px;
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: #F4F4FD;
        border: 1px solid #8E8F99;
        border-radius: 4px;
  }
  .icon-feature {
      fill: #2E2F42;
  }
}
.features-item h3 {
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    text-align: center;
}
@media only screen and (min-width: 767.98px) {
    .features-item h3 {
        text-align: left;
  }
}
@media only screen and (min-width: 1158px) {
  .features-item h3 {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
  }
}
/* #endregion Features Section */

/* #region Team Section */
.team {
    background-color: #F4F4FD;
}
.team-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    gap: 72px;
    
}
.team-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 24px;
}
@media only screen and (min-width: 767.98px) {
  .team-list {
    max-width: 552px;
  }
}
@media only screen and (min-width: 1158px) {
  .team-list {
    flex-wrap: nowrap;
    max-width: 100%;
  }
}
.team-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 264px;
    background-color: #fff;
    border-radius: 0 0 4px 4px;
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-info {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 32px 16px;
    gap: 8px;
}
.team-socials {
    display: flex;
    gap: 24px;
    justify-content: space-between;
}
.link-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    background-color: #4D5AE5;
    border-radius: 50%;
    padding: 8px;

    transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
}
.icon {
    /* display: flex;
    align-items: center;
    justify-content: center; */
    fill: #F4F4FD;
}
.link-icon:hover,
.link-icon:focus {
    background-color: #404BBF;
}
/* #endregion Team Section */

/* #region Portfolio Section*/
.portfolio-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 72px;
}
.portfolio-list {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
    column-gap: 24px;
    row-gap: 48px;
}
.portfolio-item {
    display: flex;
    flex-direction: column;
    width: 288px;
    
    
    transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
}
@media only screen and (min-width: 767.98px) {
  .portfolio-item {
    width: calc((100% - 24px) / 2);
  }
}
@media only screen and (min-width: 1157.98px) {
  .portfolio-item {
    width: calc((100% - 48px) / 3);
  }
}
.portfolio-info {
    padding: 32px 16px 32px 16px;
    border: 1px solid #E7E9FC;
    border-top: none;
}

.portfolio-item:hover,
.portfolio-item:focus {
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
        0 1px 1px 0 rgba(46, 47, 66, 0.16),
        0 1px 6px 0 rgba(46, 47, 66, 0.08);
}
.portfolio-overlay-container {
    width: 100%;
    position: relative;
    overflow: hidden;
}
.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #4D5AE5;
    color: #F4F4FD;
    display: block;
    padding: 40px 32px;
    
    transform: translateY(100%);
    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
}
.portfolio-item:hover .overlay,
.portfolio-item:focus .overlay {
    transform: translateY(0);
}
/* ... */

